--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <head>
 	<title>Eelkursus 2016</title>
 </head>
 <body>
 	<h1>Eelkursus 2016</h1>
+	<p>TODO:</p>
 </body>
